--- a/docs/02_景點與餐廳/☕巢鴨_伯爵咖啡館.md
+++ b/docs/02_景點與餐廳/☕巢鴨_伯爵咖啡館.md
@@ -8,7 +8,7 @@ tags: [餐廳, 巢鴨, 咖啡館, 早餐, 喫茶店]
 - **地點名稱**：伯爵珈啡館 (伯爵咖啡館)
 - **類型**：復古風喫茶店、早餐推薦
 - **地址**：東京都豊島區巢鴨 1-12-3
-- **Google Maps**：[點此開啟地圖](https://maps.google.com/?ie=UTF8&f=q&source=s_q&q=loc:35.7326314,+139.7400175)
+- **Google Maps**：[點此開啟地圖](https://maps.app.goo.gl/R7UUTPGDjixMxJoT9)
 - **營業時間**：
   - 週一至週五：07:00 - 17:00 (最後點餐時間：食物 16:00，飲品 16:30)
   - 週六、週日：07:00 - 20:00 (最後點餐時間：食物 19:00，飲品 19:30)
