--- a/docs/02_景點與餐廳/🍜池袋_無敵家拉麵.md
+++ b/docs/02_景點與餐廳/🍜池袋_無敵家拉麵.md
@@ -6,6 +6,7 @@
 - **地址**：東京都豊島区南池袋 1-17-1 (池袋站東口步行約 3 分鐘)
 - **營業時間**：10:30 - 隔日 04:00
 - **支付方式**：**僅收現金 (Cash Only)** ⚠️
+- **Google Maps**：[麵創房 無敵家 (點擊導航)](https://maps.app.goo.gl/muGSnLjz8TpAozQW7)
 
 ## ⚠️ 排隊禁忌 (必讀)
 - **嚴禁解壓縮**：必須「全員到齊」才能進入排隊隊伍。
