--- a/docs/02_景點與餐廳/📍池袋_太陽城寶可夢中心.md
+++ b/docs/02_景點與餐廳/📍池袋_太陽城寶可夢中心.md
@@ -7,7 +7,7 @@ tags: [景點, 池袋, 購物, 動漫, 寶可夢]
 ## 📌 基本資訊
 - **地點名稱**：Pokémon Center MEGA TOKYO & Pikachu Sweets
 - **地址**：東京都豐島區東池袋 3-1-2 (Sunshine City 專門店街 Alpa 2F)
-- **Google Maps**：[寶可夢旗艦店 (點擊導航)](https://maps.app.goo.gl/xxx)
+- **Google Maps**：[寶可夢旗艦店 (點擊導航)](https://maps.app.goo.gl/BusmC3b1zRFqfFM48)
 - **營業時間**：10:00 - 20:00 (依太陽城營業時間為準)
 - **建議停留時間**：1 - 2 小時 (熱愛者可能需半天)
 
