--- a/docs/02_景點與餐廳/📍龜有_烏龍派出所聖地.md
+++ b/docs/02_景點與餐廳/📍龜有_烏龍派出所聖地.md
@@ -6,7 +6,7 @@ tags: [景點, 龜有, 動漫, 拍照]
 
 ## 📌 基本資訊
 - **地點名稱**：龜有車站周邊 & Ario 龜有購物中心 (可作為非必要備案行程)
-- **Google Maps**：[龜有車站 (點擊導航)](https://maps.app.goo.gl/xxx)
+- **Google Maps**：[龜有車站 (點擊導航)](https://maps.app.goo.gl/vLXYaUqKwuywuYgf6)
 - **建議停留時間**：2 - 3 小時
 - **參考行程**：[ATT JAPAN 龜有烏龍派出所半日遊](https://att-japan.net/zh_tw/kamearicourse/)
 
