--- a/docs/02_景點與餐廳/📍池袋_陽光水族館.md
+++ b/docs/02_景點與餐廳/📍池袋_陽光水族館.md
@@ -10,7 +10,7 @@ tags: [景點, 池袋, 水族館, 親子]
 - **官方網站**：[Sunshine Aquarium](https://sunshinecity.jp/zh-tw/aquarium/)
 - **地點名稱**：Sunshine Aquarium (陽光水族館)
 - **地址**：東京都豐島區東池袋 3-1 (Sunshine City 頂樓 Rooftop)
-- **Google Maps**：[陽光水族館 (點擊導航)](https://maps.app.goo.gl/v11Xw4M8Qh6d1Y2P6)
+- **Google Maps**：[陽光水族館 (點擊導航)](https://maps.app.goo.gl/Kb6XKSSHX2Eucxmm7)
 - **營業時間**：10:00 - 18:00 (依季節可能有所變動，建議出發前確認)
 - **建議停留時間**：1.5 - 2 小時
 
