--- a/docs/02_景點與餐廳/📍駒込_妙義神社.md
+++ b/docs/02_景點與餐廳/📍駒込_妙義神社.md
@@ -8,7 +8,7 @@ tags: [景點, 駒込, 神社, 勝負運, 開運招福, 心願成就]
 - **地點名稱**：妙義神社 (Myogi Shrine)
 - **主要祈求**：勝負運、開運招福、心願成就
 - **地址**：東京都豐島區駒込 3-16-16
-- **Google Maps**：[妙義神社 (點擊導航)](https://maps.app.goo.gl/xxx)
+- **Google Maps**：[妙義神社 (點擊導航)](https://maps.app.goo.gl/A1LTurv6WaDUZTK2A)
 - **營業時間**：境內自由參拜 (社務所可能約 09:00 - 16:00)
   - ⚠️ **限制**：購買御守採現場排隊，**每人最多購買 5 個**。
   - ⚠️ **注意**：御守販售處於中午 12:00 至 13:00 休息。
