docs: add initial documentation index page

--- a/docs/00_行程總覽/Day5_0317_東區參拜_池袋逛街與歸途.md
+++ b/docs/00_行程總覽/Day5_0317_東區參拜_池袋逛街與歸途.md
@@ -45,7 +45,7 @@ tags: [行程, 巢鴨, 駒込, 池袋]
 - **路線二**：直接從飯店分兩台 Uber 到「京成上野站/日暮里站」轉乘 Skyliner (多人分攤划算又省力)。
 
 ## 🛫 18:00 以後：機場準備
-- **18:00** 抵達成田機場 T2。
+- **18:00** 抵達成田機場。
 - **18:00 - 18:40** 辦理登機手續、托運行李 (通常起飛前兩小時到兩個半小時開櫃)。
 - **18:40 - 19:40** 出境審查、免稅店最後衝刺與晚餐。
-- **20:25 - 23:30** 搭乘 IT203 滿載而歸，回到桃園 TPE T1！
+- **20:25 - 23:30** 滿載而歸，回到桃園 TPE！
